--- a/Test.html
+++ b/Test.html
@@ -47,10 +47,10 @@
 	</div>
 	<div class = "Nav">
 		<ul class ="TopNav">
-			<li><a class = "Active" href="">Home</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Contact Us</a></li>
-			<li><a href="">Help</a></li>
+			<li><a class = "Active" href="">Elridge</a></li>
+			<li><a href="">Jolibi</a></li>
+			<li><a href="">Makdo</a></li>
+			<li><a href="">Intergalactic Burnik</a></li>
 		</ul>
 	</div>
 	<div style="height:1000px">
